changeLinkProduct