@@ -60,11 +60,6 @@ class ExportTest {
                 -1L
         );
 
-        Product product0 = new Product("Zlatý slitek 1g ARGOR-HERAEUS (Švýcarsko)", Producer.ARGOR_HERAEUS, Form.BAR, Metal.GOLD, 1.0, 2023, false);
-        Product product1 = new Product("Stříbrná mince 1 oz (trojská unce) WIENER PHILHARMONIKER Rakousko 2011", Producer.MUNZE_OSTERREICH, Form.COIN, Metal.SILVER, 31.1, 2022, false);
-        Product product2 = new Product("5000g Argor Heraeus / Heraeus Investiční stříbrný slitek", Producer.MUNZE_OSTERREICH, Form.BAR, Metal.SILVER, 5000, 2023, false);
-        Product product3 = new Product("Platinový slitek 5 g ARGOR-HERAEUS (Švýcarsko)", Producer.HERAEUS, Form.BAR, Metal.PLATINUM, 5, 2021, false);
-
         link00.setPricePairs(
                 List.of(pricePair00)
         );
@@ -83,18 +78,11 @@ class ExportTest {
         link30.setPricePairs(
                 List.of(pricePair30)
         );
-        product0.setLinks(
-                Arrays.asList(link00, link01)
-        );
-        product1.setLinks(
-                Arrays.asList(link10, link11)
-        );
-        product2.setLinks(
-                List.of(link20)
-        );
-        product3.setLinks(
-                List.of(link30)
-        );
+
+        Product product0 = new Product("Zlatý slitek 1g ARGOR-HERAEUS (Švýcarsko)", Producer.ARGOR_HERAEUS, Form.BAR, Metal.GOLD, 1.0, 2023, false, Arrays.asList(link00, link01));
+        Product product1 = new Product("Stříbrná mince 1 oz (trojská unce) WIENER PHILHARMONIKER Rakousko 2011", Producer.MUNZE_OSTERREICH, Form.COIN, Metal.SILVER, 31.1, 2022, false, Arrays.asList(link10, link11));
+        Product product2 = new Product("5000g Argor Heraeus / Heraeus Investiční stříbrný slitek", Producer.MUNZE_OSTERREICH, Form.BAR, Metal.SILVER, 5000, 2023, false, List.of(link20));
+        Product product3 = new Product("Platinový slitek 5 g ARGOR-HERAEUS (Švýcarsko)", Producer.HERAEUS, Form.BAR, Metal.PLATINUM, 5, 2021, false, List.of(link30));
 
         InvestmentMetal investmentMetal0 = new InvestmentMetal(product0, Dealer.ZLATAKY, 1808.45, LocalDate.now());
         InvestmentMetal investmentMetal1 = new InvestmentMetal(product1, Dealer.BESSERGOLD_CZ, 858.00, LocalDate.now().minusWeeks(65));
